--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-router-dom": "^7.9.5"
+    // "react-vertical-timeline-component": "^2.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
