--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
+    "react-chrono": "^3.3.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
-    // "react-vertical-timeline-component": "^2.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
