added new pages , contact us, ear while you learn

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.1",
     "react-chrono": "^3.3.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "react-timeline-scribble": "^1.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
